# Cplusplus_20_21_Submission

./: .gitignore  README.md  readme
GameDevAndBeyond_Template/GameDevAndBeyond_Template/: CMakeLists.txt
GameDevAndBeyond_Template/GameDevAndBeyond_Template/Assets/: Lyn.fig  Moon.fig  name.fig
GameDevAndBeyond_Template/GameDevAndBeyond_Template/Code/GameDevAndBeyond/: Game.cpp  Game.h  main.cpp
GameDevAndBeyond_Template/GameDevAndBeyond_Template/Code/SFMLEngine/ComponentSystem/: ComponentPool.cpp  ComponentPool.h  ComponentSystem.cpp  ComponentSystem.h
GameDevAndBeyond_Template/GameDevAndBeyond_Template/Code/SFMLEngine/Core/: Engine.cpp  Engine.h  InputManager.cpp  InputManager.h
GameDevAndBeyond_Template/GameDevAndBeyond_Template/Code/SFMLEngine/Core/Interfaces/: EngineTickListener.h
GameDevAndBeyond_Template/GameDevAndBeyond_Template/Code/SFMLEngine/EntitySystem/: EntityId.cpp  EntityId.h  EntitySystem.cpp  EntitySystem.h
GameDevAndBeyond_Template/GameDevAndBeyond_Template/Code/SFMLEngine/FightingEngine/: AnimatorSystem.cpp  AnimatorSystem.h  CharacterEditor.cpp  CharacterEditor.h  Fighter.cpp  Fighter.h  InputSystem.cpp  InputSystem.h  LogicSystem.h  Lyn.h  SailorMoon.h  TransformSystem.cpp  TransformSystem.h
GameDevAndBeyond_Template/GameDevAndBeyond_Template/Code/SFMLEngine/GameFramework/: AudioProperties.h  TransformProperties.cpp  TransformProperties.h
GameDevAndBeyond_Template/GameDevAndBeyond_Template/Code/SFMLEngine/GameFramework/Rendering/: SpriteRenderProperties.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h  TextRenderProperties.h  TextRenderSystem.cpp  TextRenderSystem.h
GameDevAndBeyond_Template/GameDevAndBeyond_Template/Code/SFMLEngine/Serialization/: BinArchive.cpp  BinArchive.h  IArchive.h  JsonArchive.cpp  JsonArchive.h  VectorInterface.h
